mobile flicker fix 01

--- a/v2/style.css
+++ b/v2/style.css
@@ -7,6 +7,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   background-color: #202020;
 }
